CASMCMS-7548: Added ability to bulk update components
